# mistral-ynab-connector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  pytest.ini  ynab_client.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
tests/: __init__.py  conftest.py  test_config.py  test_endpoints.py  test_mcp_endpoints.py  test_validators.py  test_ynab_client.py  test_ynab_client_unit.py
tests/resources/: __init__.py  test_accounts.py  test_plans.py  test_transactions.py  test_user.py
